--- a/Recipe 2/Recipe2.html
+++ b/Recipe 2/Recipe2.html
@@ -11,6 +11,7 @@
   <h1>Chocolate Cake</h1>
   <p id="para1">If you want to make a  homemade chocolate cake from scratch, this is a simple, yet easy recipe to make. It's one you are certain to enjoy.</p>
 
+  <div id="testDiv1" class: "example1">
   <h2>The Ingredients</h2>
   <ul>
     <li>3/4 cup butter or margarine, softened</li>
@@ -20,9 +21,11 @@
     <li>2 teaspoon vanilla</li>
     <li> 1 1/2 cup milk</li>
     </ul>
+</div>
 
-
+<div id="testDiv2" class: "example2">
     <h2>How to Make the Cake:</h2>
+
     <ol>
       <li>Preheat the oven to 350 degrees</li>
       <li>Grease and flour three 6" X 1 1/2" round cake pans</li>
@@ -38,15 +41,15 @@
       <li>Remove from oven and allow cakes to cool in pans for a few minutes</li>
       <li>Place cakes on a wire rack, to them allow to completely cool</li>
       </ol>
-
-      <h2> What Flavor Icing is the Best for Chocolate Cake?</h2>
-
+</div>
+      <div id="testDiv3" class: "example3">
+        <h2> What Flavor Icing is the Best for Chocolate Cake?</h2>
       <ol>
         <li>Butter Cream</li>
         <li>Chocolate</li>
         <li>Cocounut</li>
         <li>Cream Cheese</li>
       </ol>
-
+</div>
 </body>
 </html>
