--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Fashion</title>
+  <title>Fashion!</title>
   <meta charset="utf-8">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body>
     <div class="container">
   <h1>Hello Bootstrap!!!</h1>
