--- a/final_project/index.html
+++ b/final_project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Fashion!</title>
+
   <meta charset="utf-8">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,43 +9,77 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   </head>
-
   <body>
-    <div class="container">
-  <h1>Hello Bootstrap!!!</h1>
-  <p class="lead text-primary">This file is so cool</p>
+<div class="container">
+  <h1>Marisa Louise Kirwan</h1>
+<p class="lead text-danger">Photography</p>
+<div class="row">
+<div class="col-md-2">
+<nav>
+<ul class="nav nav-pills nav-stacked">
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="portfolio.html">Portfolio</a></li>
+</ul>
+</nav>
+  </div>
+<div class="col-md-10">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="images/homeimage.jpg" alt="Sab">
+      <div class="carousel-caption">
+        <h3>Black and White</h3>
+        <p>Falling</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/homeimage2.jpg" alt="Sab">
+      <div class="carousel-caption">
+        <h3>Black and White</h3>
+        <p>Shadows</p>
+      </div>
+    </div>
 
-  <div class "row">
+    <div class="item">
+      <img src="images/homeimage3.jpg" alt="Wall Ary">
+      <div class="carousel-caption">
+        <h3>Black and White</h3>
+        <p>Wall Art</p>
+      </div>
+    </div>
 
-    <div class="col-md-3 col-sm-3">
-    coulmn design
-</div>
-<div class="col-md-3 col-sm-3">
-  hdjhfjshksd
-  <div class="col-md-3">
-    dhhfjdshfjksdhfjshf
-</div>
-</div>
-<div class "row">
-
-  <div class="col-md-3 col-sm-3">
-<div class= "row"
-<div class="col-md-4">
-  uidfhsduhfiudshfudhfodu
-</div>
-<div class="col-md-4">
-hfjdfkshk
-</div>
-<div class="col-md-4">
-fkdjflsdls
+    <div class="item">
+      <img src="images/homeimage4.jpg" alt="Moped">
+      <div class="carousel-caption">
+        <h3>Black and White</h3>
+        <p>Travel</p>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 </div>
 </div>
 </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js "></script>
 <script src="js/bootstrap.min.js"></script>
 
 
   </body>
-  <html>
+  </html>
