--- a/final_project/portfolio.html
+++ b/final_project/portfolio.html
@@ -16,12 +16,10 @@
 
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
       <ul class="nav navbar-nav">
-        <li class="center"><a href="index.html">Home</a>
-        <li><a href="about.html">About</a>
-        <li><a href="portfolio.html">Portfolio</a>
+        <li class="center"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </div>
   </nav>
@@ -31,17 +29,20 @@
         <h2>Black and White:Falling</h2>
         <img src="images/homeimage.jpg" alt="Sab" style="width:550px;height:350px">
 
-    </div><div class="col-md-6">
+    </div>
+    <div class="col-md-6">
 
         <h2>Black and White:Shadow</h2>
         <img src="images/homeimage2.jpg" alt="Sab" style="width:550px;height:350px">
 
-    </div><div class="col-md-6">
+    </div>
+    <div class="col-md-6">
 
         <h2>Black and White:Wall Art</h2>
         <img src="images/homeimage3.jpg" alt="Wall" style="width:550px;height:350px">
 
-    </div><div class="col-md-6">
+    </div>
+    <div class="col-md-6">
 
         <h2>Black and White:Travel</h2>
         <img src="images/homeimage4.jpg" alt="Moped" style="width:550px;height:350px">
