--- a/final_project/about.html
+++ b/final_project/about.html
@@ -15,19 +15,17 @@
   <p class="lead text-danger">Photography</p>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
-      </div>
       <ul class="nav navbar-nav">
-        <li class="center"><a href="index.html">Home</a>
-        <li><a href="about.html">About</a>
-        <li><a href="portfolio.html">Portfolio</a>
+        <li class="center"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </div>
   </nav>
 <div class="row">
 <div class="col-md-4">
 
-        <img src="images/aboutimage.jpg" alt="Me" style="width:300px;600height:px">
+        <img src="images/aboutimage.jpg" alt="Me" style="width:300px;height:450px">
     </div>
 
     <div class="col-md-8">
